--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,7 +3,27 @@
     color: rgba(255, 255, 255, .8);
     bottom: 0;
     width: 100%;
-    height: 60px;
     position: absolute;
-    line-height: 60px;
+}
+
+.footer ul{
+    list-style-type: none
+}
+
+.footer ul li{
+    display: inline-block;
+    float: left;
+    padding: 20px;
+    min-width: 150px;
+    cursor:pointer;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: center;
+    border-right:1px solid rgba(255, 255, 255, .8);
+}
+
+.footer ul li:hover{
+    background: rgba(255, 255, 255, .8);
+    color: rgba(0, 0, 0, .8);
+    border-right:1px solid rgba(0, 0, 0, .8);
 }
