Updated new reducers

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -45,6 +45,11 @@ body{
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeb8e', endColorstr='#a5c956',GradientType=0 ); /* IE6-9 */
 }
 
+.content-container{
+    height: calc(100% - 56px);
+    overflow-y: auto
+}
+
 .clearfix:after {
   clear: both;
   content: ".";
